# ctc-api

./: .env  .gitignore  Cargo.toml  README.md  config.js  index.js  package-lock.json  package.json
controllers/: check.js  math.js  user.js
controllers/caesar/: attack.js  decrypt.js  encrypt.js  router.js
controllers/diffie-hellman/: exchange.js  router.js
controllers/dss/: router.js  sign.js  verify.js
controllers/rsa/: decrypt.js  encrypt.js  router.js  verify.js
db/: query.js  user.js
db/caesar/: attack.js  decrypt.js  encrypt.js
db/diffie-hellman/: exchange.js
db/dss/: sign.js  verify.js
db/rsa/: decrypt.js  encrypt.js  verify.js
lib/: client-error.js  math.js  mod.js  number.js  secure.js  user.js
lib/caesar/: attack.js  decrypt.js  encrypt.js
lib/diffie-hellman/: exchange.js
lib/dss/: sign.js  verify.js
lib/rsa/: decrypt.js  encrypt.js  verify.js
middleware/: cors.js  errors.js  rate.js  secure.js  user.js
migrations/2025-08-08-204519_create_users/: up.sql
migrations/2025-08-09-053909_create_caesar/: down.sql  up.sql
migrations/2025-08-09-090412_rename_caesar/: down.sql  up.sql
migrations/2025-08-09-095017_create_diffie_hellmans/: down.sql  up.sql
migrations/2025-08-09-194718_remove_unnecessary_columns/: down.sql  up.sql
migrations/2025-08-09-201212_create_rsas/: down.sql  up.sql
migrations/2025-08-09-205537_rename_rsa_pq/: down.sql  up.sql
migrations/2025-08-09-212123_create_dss/: down.sql  up.sql
src/: error.rs  leaderboard.rs  main.rs  math.rs  schema.rs  state.rs
src/middleware/: auth.rs  mod.rs  rate.rs
(+28 files in other folders)
